--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,32 @@
 <resources>
     <string name="app_name">Control de Riego</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Opciones</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="edit_message">Enter a message</string>
-    <string name="button_send">Send</string>
-    <string name="title_activity_display_message">My Message</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="button_refresh_variables">Refresh Variables</string>
-    <string name="count_label">Count:</string>
-    <string name="temperature_label">Temperature:</string>
-    <string name="missingWifi">Please connect to the local Wifi network</string>
-    <string name="unabletoconnect">Can\'t connect to the embedded system</string>
-    <string name="X_label">Variable x:</string>
-    <string name="save_button">SAVE</string>
+    <string name="button_refresh_variables">Obtener valores</string>
+    <string name="button_refresh">Solicitar nuevos valores</string>
+
+    <string name="temperature_label">Temperatura:</string>
+    <string name="humidity_label">Humedad:</string>
+    <string name="rain_label">¿Está lloviendo?</string>
+    <string name="forecast_label">Próximas precipitaciones previstas:</string>
+    <string name="timestamp_label">Hora de adquisición de los valores:</string>
+
+    <string name="missingWifi">Por favor conectese a la red local WiFi</string>
+    <string name="unabletoconnect">No se puede establecer conexión con el sistema</string>
+
+    <string name="refreshRate_label">Tasa de refresco de las variables de los sensores: </string>
+    <string name="refreshWeatherRate_label">Tasa de solicitud del pronóstico meteorológico:</string>
+    <string name="location_label">Ubicación (para obtener el pronóstico meteorológico). Introducir en la forma "Ciudad, País":</string>
+
+    <string name="save_button">Guardar</string>
+
     <string name="ok">OK</string>
+
     <string name="tab_1">General</string>
     <string name="tab_2">Avanzado</string>
+
     <string name="success">Success</string>
 
 
